src/llvm/lto.nim


proc ltoCodegenAddModule*(cg: LtoCodeGenT; `mod`: LtoModuleT): LtoBoolT {.cdecl, importc: "lto_codegen_add_module", dynlib: LLVMlib.}
## *
##  Sets the object module for code generation. This will transfer the ownership
##  of the module to the code generator.
##
##  \c cg and \c mod must both be in the same context.
##
##  \since LTO_API_VERSION=13
##

proc ltoCodegenSetModule*(cg: LtoCodeGenT; `mod`: LtoModuleT) {.cdecl, importc: "lto_codegen_set_module", dynlib: LLVMlib.}
## *
##  Sets if debug info should be generated.
##  Returns true on error (check lto_get_error_message() for details).
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenSetDebugModel*(cg: LtoCodeGenT; a2: LtoDebugModel): LtoBoolT {.cdecl, importc: "lto_codegen_set_debug_model", dynlib: LLVMlib.}
## *
##  Sets which PIC code model to generated.
##  Returns true on error (check lto_get_error_message() for details).
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenSetPicModel*(cg: LtoCodeGenT; a2: LtoCodegenModel): LtoBoolT {.cdecl, importc: "lto_codegen_set_pic_model", dynlib: LLVMlib.}
## *
##  Sets the cpu to generate code for.
##
##  \since LTO_API_VERSION=4
##

proc ltoCodegenSetCpu*(cg: LtoCodeGenT; cpu: cstring) {.cdecl, importc: "lto_codegen_set_cpu", dynlib: LLVMlib.}
## *
##  Sets the location of the assembler tool to run. If not set, libLTO
##  will use gcc to invoke the assembler.
##
##  \since LTO_API_VERSION=3
##

proc ltoCodegenSetAssemblerPath*(cg: LtoCodeGenT; path: cstring) {.cdecl, importc: "lto_codegen_set_assembler_path", dynlib: LLVMlib.}
## *
##  Sets extra arguments that libLTO should pass to the assembler.
##
##  \since LTO_API_VERSION=4
##

proc ltoCodegenSetAssemblerArgs*(cg: LtoCodeGenT; args: cstringArray; nargs: cint) {. cdecl, importc: "lto_codegen_set_assembler_args", dynlib: LLVMlib.}
## *
##  Adds to a list of all global symbols that must exist in the final generated
##  code. If a function is not listed there, it might be inlined into every usage
##  and optimized away.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenAddMustPreserveSymbol*(cg: LtoCodeGenT; symbol: cstring) {.cdecl, importc: "lto_codegen_add_must_preserve_symbol", dynlib: LLVMlib.}
## *
##  Writes a new object file at the specified path that contains the
##  merged contents of all modules added so far.
##  Returns true on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=5
##

proc ltoCodegenWriteMergedModules*(cg: LtoCodeGenT; path: cstring): LtoBoolT {.cdecl, importc: "lto_codegen_write_merged_modules", dynlib: LLVMlib.}
## *
##  Generates code for all added modules into one native object file.
##  This calls lto_codegen_optimize then lto_codegen_compile_optimized.
##
##  On success returns a pointer to a generated mach-o/ELF buffer and
##  length set to the buffer size.  The buffer is owned by the
##  lto_code_gen_t and will be freed when lto_codegen_dispose()
##  is called, or lto_codegen_compile() is called again.
##  On failure, returns NULL (check lto_get_error_message() for details).
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenCompile*(cg: LtoCodeGenT; length: ptr csize): pointer {.cdecl, importc: "lto_codegen_compile", dynlib: LLVMlib.}
## *
##  Generates code for all added modules into one native object file.
##  This calls lto_codegen_optimize then lto_codegen_compile_optimized (instead
##  of returning a generated mach-o/ELF buffer, it writes to a file).
##
##  The name of the file is written to name. Returns true on error.
##
##  \since LTO_API_VERSION=5
##

proc ltoCodegenCompileToFile*(cg: LtoCodeGenT; name: cstringArray): LtoBoolT {.cdecl, importc: "lto_codegen_compile_to_file", dynlib: LLVMlib.}
## *
##  Runs optimization for the merged module. Returns true on error.
##
##  \since LTO_API_VERSION=12
##

proc ltoCodegenOptimize*(cg: LtoCodeGenT): LtoBoolT {.cdecl, importc: "lto_codegen_optimize", dynlib: LLVMlib.}
## *
##  Generates code for the optimized merged module into one native object file.
##  It will not run any IR optimizations on the merged module.
##
##  On success returns a pointer to a generated mach-o/ELF buffer and length set
##  to the buffer size.  The buffer is owned by the lto_code_gen_t and will be
##  freed when lto_codegen_dispose() is called, or
##  lto_codegen_compile_optimized() is called again. On failure, returns NULL
##  (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=12
##

proc ltoCodegenCompileOptimized*(cg: LtoCodeGenT; length: ptr csize): pointer {.cdecl, importc: "lto_codegen_compile_optimized", dynlib: LLVMlib.}
## *
##  Returns the runtime API version.
##
##  \since LTO_API_VERSION=12
##

proc ltoApiVersion*(): cuint {.cdecl, importc: "lto_api_version", dynlib: LLVMlib.}
## *
##  Sets options to help debug codegen bugs.
##
##  This function takes one or more options separated by spaces.
##  Warning: passing file paths through this function may confuse the argument
##  parser if the paths contain spaces.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenDebugOptions*(cg: LtoCodeGenT; a2: cstring) {.cdecl, importc: "lto_codegen_debug_options", dynlib: LLVMlib.}
## *
##  Same as the previous function, but takes every option separately through an
##  array.
##
##  \since prior to LTO_API_VERSION=26
##

proc ltoCodegenDebugOptionsArray*(cg: LtoCodeGenT; a2: cstringArray; number: cint) {. cdecl, importc: "lto_codegen_debug_options_array", dynlib: LLVMlib.}
## *
##  Initializes LLVM disassemblers.
##  FIXME: This doesn't really belong here.
##
##  \since LTO_API_VERSION=5
##

proc ltoInitializeDisassembler*() {.cdecl, importc: "lto_initialize_disassembler", dynlib: LLVMlib.}
## *
##  Sets if we should run internalize pass during optimization and code
##  generation.
##
##  \since LTO_API_VERSION=14
##

proc ltoCodegenSetShouldInternalize*(cg: LtoCodeGenT; shouldInternalize: LtoBoolT) {. cdecl, importc: "lto_codegen_set_should_internalize", dynlib: LLVMlib.}
## *
##  Set whether to embed uselists in bitcode.
##
##  Sets whether \a lto_codegen_write_merged_modules() should embed uselists in
##  output bitcode.  This should be turned on for all -save-temps output.
##
##  \since LTO_API_VERSION=15
##

proc ltoCodegenSetShouldEmbedUselists*(cg: LtoCodeGenT;shouldEmbedUselists: LtoBoolT) {.cdecl, importc: "lto_codegen_set_should_embed_uselists", dynlib: LLVMlib.}
## * Opaque reference to an LTO input file

type
  LtoInputT* = ptr opaqueLTOInput

## *
##  Creates an LTO input file from a buffer. The path
##  argument is used for diagnotics as this function
##  otherwise does not know which file the given buffer
##  is associated with.
##
##  \since LTO_API_VERSION=24
##

proc ltoInputCreate*(buffer: pointer; bufferSize: csize; path: cstring): LtoInputT {. cdecl, importc: "lto_input_create", dynlib: LLVMlib.}
## *
##  Frees all memory internally allocated by the LTO input file.
##  Upon return the lto_module_t is no longer valid.
##
##  \since LTO_API_VERSION=24
##

proc ltoInputDispose*(input: LtoInputT) {.cdecl, importc: "lto_input_dispose", dynlib: LLVMlib.}
## *
##  Returns the number of dependent library specifiers
##  for the given LTO input file.
##
##  \since LTO_API_VERSION=24
##

proc ltoInputGetNumDependentLibraries*(input: LtoInputT): cuint {.cdecl, importc: "lto_input_get_num_dependent_libraries", dynlib: LLVMlib.}
## *
##  Returns the ith dependent library specifier
##  for the given LTO input file. The returned
##  string is not null-terminated.
##
##  \since LTO_API_VERSION=24
##

proc ltoInputGetDependentLibrary*(input: LtoInputT; index: csize; size: ptr csize): cstring {. cdecl, importc: "lto_input_get_dependent_library", dynlib: LLVMlib.}
## *
##  Returns the list of libcall symbols that can be generated by LTO
##  that might not be visible from the symbol table of bitcode files.
##
##  \since prior to LTO_API_VERSION=25
##

proc ltoRuntimeLibSymbolsList*(size: ptr csize): cstringArray {.cdecl, importc: "lto_runtime_lib_symbols_list", dynlib: LLVMlib.}
## *
##  @} // endgoup LLVMCLTO
##  @defgroup LLVMCTLTO ThinLTO
##  @ingroup LLVMC
##
##  @{
##
## *
##  Type to wrap a single object returned by ThinLTO.
##
##  \since LTO_API_VERSION=18
##

type
  LTOObjectBuffer* {.bycopy.} = object
    buffer*: cstring
    size*: csize


## *
##  Instantiates a ThinLTO code generator.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##
##  The ThinLTOCodeGenerator is not intended to be reuse for multiple
##  compilation: the model is that the client adds modules to the generator and
##  ask to perform the ThinLTO optimizations / codegen, and finally destroys the
##  codegenerator.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCreateCodegen*(): ThinltoCodeGenT {.cdecl, importc: "thinlto_create_codegen", dynlib: LLVMlib.}
## *
##  Frees the generator and all memory it internally allocated.
##  Upon return the thinlto_code_gen_t is no longer valid.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenDispose*(cg: ThinltoCodeGenT) {.cdecl, importc: "thinlto_codegen_dispose", dynlib: LLVMlib.}
## *
##  Add a module to a ThinLTO code generator. Identifier has to be unique among
##  all the modules in a code generator. The data buffer stays owned by the
##  client, and is expected to be available for the entire lifetime of the
##  thinlto_code_gen_t it is added to.
##
##  On failure, returns NULL (check lto_get_error_message() for details).
##
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenAddModule*(cg: ThinltoCodeGenT; identifier: cstring;data: cstring; length: cint) {.cdecl, importc: "thinlto_codegen_add_module", dynlib: LLVMlib.}
## *
##  Optimize and codegen all the modules added to the codegenerator using
##  ThinLTO. Resulting objects are accessible using thinlto_module_get_object().
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenProcess*(cg: ThinltoCodeGenT) {.cdecl, importc: "thinlto_codegen_process", dynlib: LLVMlib.}
## *
##  Returns the number of object files produced by the ThinLTO CodeGenerator.
##
##  It usually matches the number of input files, but this is not a guarantee of
##  the API and may change in future implementation, so the client should not
##  assume it.
##
##  \since LTO_API_VERSION=18
##

proc thinltoModuleGetNumObjects*(cg: ThinltoCodeGenT): cuint {.cdecl, importc: "thinlto_module_get_num_objects", dynlib: LLVMlib.}
## *
##  Returns a reference to the ith object file produced by the ThinLTO
##  CodeGenerator.
##
##  Client should use \p thinlto_module_get_num_objects() to get the number of
##  available objects.
##
##  \since LTO_API_VERSION=18
##

proc thinltoModuleGetObject*(cg: ThinltoCodeGenT; index: cuint): LTOObjectBuffer {. cdecl, importc: "thinlto_module_get_object", dynlib: LLVMlib.}
## *
##  Returns the number of object files produced by the ThinLTO CodeGenerator.
##
##  It usually matches the number of input files, but this is not a guarantee of
##  the API and may change in future implementation, so the client should not
##  assume it.
##
##  \since LTO_API_VERSION=21
##

proc thinltoModuleGetNumObjectFiles*(cg: ThinltoCodeGenT): cuint {.cdecl, importc: "thinlto_module_get_num_object_files", dynlib: LLVMlib.}
## *
##  Returns the path to the ith object file produced by the ThinLTO
##  CodeGenerator.
##
##  Client should use \p thinlto_module_get_num_object_files() to get the number
##  of available objects.
##
##  \since LTO_API_VERSION=21
##

proc thinltoModuleGetObjectFile*(cg: ThinltoCodeGenT; index: cuint): cstring {.cdecl, importc: "thinlto_module_get_object_file", dynlib: LLVMlib.}
## *
##  Sets which PIC code model to generate.
##  Returns true on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=18
##
